@@ -93,11 +93,11 @@ static rrtype_descriptor_type rrtype_descriptors[(RRTYPE_DESCRIPTORS_LENGTH+1)] 
 	  { RDATA_ZF_TEXTS } },
 	/* 17 */
 	{ TYPE_RP, "RP", T_RP, 2, 2,
-	  { RDATA_WF_COMPRESSED_DNAME, RDATA_WF_COMPRESSED_DNAME },
+	  { RDATA_WF_UNCOMPRESSED_DNAME, RDATA_WF_UNCOMPRESSED_DNAME },
 	  { RDATA_ZF_DNAME, RDATA_ZF_DNAME } },
 	/* 18 */
 	{ TYPE_AFSDB, "AFSDB", T_AFSDB, 2, 2,
-	  { RDATA_WF_SHORT, RDATA_WF_COMPRESSED_DNAME },
+	  { RDATA_WF_SHORT, RDATA_WF_UNCOMPRESSED_DNAME },
 	  { RDATA_ZF_SHORT, RDATA_ZF_DNAME } },
 	/* 19 */
 	{ TYPE_X25, "X25", T_X25, 1, 1,
@@ -109,7 +109,7 @@ static rrtype_descriptor_type rrtype_descriptors[(RRTYPE_DESCRIPTORS_LENGTH+1)] 
 	  { RDATA_ZF_TEXT, RDATA_ZF_TEXT } },
 	/* 21 */
 	{ TYPE_RT, "RT", T_RT, 2, 2,
-	  { RDATA_WF_SHORT, RDATA_WF_COMPRESSED_DNAME },
+	  { RDATA_WF_SHORT, RDATA_WF_UNCOMPRESSED_DNAME },
 	  { RDATA_ZF_SHORT, RDATA_ZF_DNAME } },
 	/* 22 */
 	{ TYPE_NSAP, "NSAP", T_NSAP, 1, 1,
