@@ -582,14 +582,6 @@ C 4.3 Label compression in RDATA
    -MB, MG, MR, MINFO, MX also have compressed dnames.
     These RRs and their compression are described in RFC 883.
 
-   -AFSDB, RP, RT   (rfc1183, Section 1,2 & 3.3.3)
-
-    The format of these RR does is not CLASS specific so compression
-    is done for:
-    dname of the 'hostname' field for AFSDB
-    dname of the 'mbox-dname' and 'txt-dname' for RP
-    dname of the 'intermediate-host' for RT.
-
    -NSEC, RRSIG and DNSKEY MUST NOT have dname compression (rfc 4034).
 
   For RRs not mentioned here no label compression in the rdata is
@@ -1017,6 +1009,22 @@ Not implemented:
 
 
 Appendix D. Changes to this file.
+
+20 march 2013 (Matthijs Mekking).
+- Removed requirements label compression for RP, RT and AFSDB.
+
+19 november 2012 (Matthijs Mekking).
+- Updated file with RFC 6698 (DANE) support for TLSA RR type and
+  RFC 6742 (ILNP) support for NID, L32, L64, LP RR types.
+
+17 april 2012 (Matthijs Mekking).
+- Updated file with RFC 5936 (AXFR) and RFC 6605 (ECDSA) support.
+
+17 october 2011 (Matthijs Mekking).
+- Updated file with RFC 5702 (SHA-2) and RFC 4509 (SHA-256 DS) support.
+
+17 october 2011 (Matthijs Mekking).
+- Added section on minimal responses.
 
 24 february 2010 (Matthijs Mekking).
 - Updated file with RFC 5001 (NSID) and RFC 5155 (NSEC3) support (version
